--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,2 @@
-[package]
-name = "sakura-secure"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-crossterm = "0.28.1"
-env_logger = "0.11.6"
-log = "0.4.25"
-ratatui = "0.29.0"
-serde = { version = "1.0.217", features = ["derive"] }
-ssh2 = "0.9.4"
+[workspace]
+members = ["server", "client"]
