--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.40"
+color-eyre = "0.6.3"
 crossterm = "0.28.1"
 env_logger = "0.11.6"
 log = "0.4.25"
