--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [dependencies]
 tonic = "0.9"
 tokio = { version = "1", features = ["full"] }
-sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
+sqlx = { version = "0.8.1", features = [
+    "postgres",
+    "runtime-tokio-native-tls",
+] }
 jsonwebtoken = "8"
 serde = { version = "1", features = ["derive"] }
